--- a/Deployment_UI.yaml
+++ b/Deployment_UI.yaml
@@ -14,7 +14,7 @@ spec:
         app: python-ui
     spec:
       containers:
-      - image: 499199586988.dkr.ecr.ap-southeast-1.amazonaws.com/testpro
+      - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
         name: python-ui
         ports:
         - containerPort: 80
