--- a/Deployment_UI.yaml
+++ b/Deployment_UI.yaml
@@ -16,5 +16,9 @@ spec:
       containers:
       - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
         name: python-ui
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
         - containerPort: 80
