--- a/Service_UI.yaml
+++ b/Service_UI.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:	
   ports:	
   - port: 80	
-    targetPort: 80	
+    targetPort: 80
+    type: NodePort
   selector:	
     app: python-ui
+   
