--- a/argocd/Service_UI.yaml
+++ b/argocd/Service_UI.yaml
@@ -1,1 +1,11 @@
 
+apiVersion: v1	
+kind: Service	
+metadata:	
+  name: python-ui	
+spec:	
+  ports:	
+  - port: 80	
+    targetPort: 80
+  selector:	
+    app: python-ui
