--- a/argocd/hpa.yaml
+++ b/argocd/hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   labels:
-    app: qb-billing-service
+    app: python-ui
   name: hpa
 spec:
   minReplicas: 3
@@ -12,31 +12,9 @@ spec:
       describedObject:
         apiVersion: apps/v1
         kind: Deployment
-        name: qb-billing-service
+        name: python-ui
       metric:
         name: namespace_app_pod_cpu_utilization
-      target:
-        type: Value
-        value: 70
-    type: Object
-  - object:
-      describedObject:
-        apiVersion: apps/v1
-        kind: Deployment
-        name: qb-billing-service
-      metric:
-        name: namespace_app_pod_jvm_memory_heap_utilization
-      target:
-        type: Value
-        value: 75
-    type: Object
-  - object:
-      describedObject:
-        apiVersion: apps/v1
-        kind: Deployment
-        name: qb-billing-service
-      metric:
-        name: namespace_app_pod_tomcat_threads_busy_percentage
       target:
         type: Value
         value: 70
@@ -44,4 +22,4 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: qb-billing-service-appd-deployment
+    name: python-ui
