--- a/argocd/Service_UI.yaml
+++ b/argocd/Service_UI.yaml
@@ -5,7 +5,7 @@ metadata:
   name: python-ui	
 spec:	
   ports:	
-  - name: python-ports
+  - name: python
   - port: 80	
     targetPort: 80
   selector:	
