--- a/argocd/hpa.yaml
+++ b/argocd/hpa.yaml
@@ -1,25 +1,12 @@
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  labels:
-    app: python-ui
-  name: hpa
+  name: python-ui
 spec:
-  minReplicas: 3
-  maxReplicas: 10
-  metrics:
-  - object:
-      describedObject:
-        apiVersion: apps/v1
-        kind: Deployment
-        name: python-ui
-      metric:
-        name: namespace_app_pod_cpu_utilization
-      target:
-        type: Value
-        value: 70
-    type: Object
+  maxReplicas: 6
+  minReplicas: 2
   scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: python-ui
+    apiVersion: argoproj.io/v1alpha1
+    kind: Rollout
+    name: example-rollout
+  targetCPUUtilizationPercentage: 80
